[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I'm Tarun and this is my first webapp.
-            <h4>I've made ome new local changes</h4>
+            <h4>I've made some new local changes</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
