--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,6 +5,7 @@
             
             Article One | Tarun Chadha
         </title>
+        <meta name="viewport" content="width=device-width, initial scale=1" />
     </head>
     <body>
         <div>
