--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,8 +6,17 @@
             Article One | Tarun Chadha
         </title>
         <meta name="viewport" content="width=device-width, initial scale=1" />
+        <style>
+            .container{
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
+        <div class="container">
         <div>
             <a href="/">Home</a>
         </div>
@@ -31,6 +40,7 @@
                 
                 This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article. This is the content for my first article.
             </p>
+        </div>
         </div>
     </body>
     
