--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,19 +6,9 @@
             Article One | Tarun Chadha
         </title>
         <meta name="viewport" content="width=device-width, initial scale=1" />
-        <style>
-            .container{
-                    max-width: 800px;
-                    margin: 0 auto;
-                    color: #060606;
-                    font-family: sans-serif;
-                    padding-top: 60px;
-                    padding-left: 20px;
-                    padding-right: 20px;
-            }
-        </style>
-    </head>
-    <body>
+        <link href="/ui/style.css" rel="stylesheet" />
+       </head>
+       <body>
         <div class="container">
         <div>
             <a href="/">Home</a>
