--- a/ui/index.html
+++ b/ui/index.html
@@ -12,6 +12,9 @@
             Hi! I'm Tarun and this is my first webapp.
             <h4>I've made some new local changes</h4>
         </div>
+        <script>
+            alert('Hi, I\'m JavaScript');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
