--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div id='main-text' class="center text-big bold">
             Hi! I'm Tarun and this is my first webapp.
             <h4>I've made some new local changes</h4>
         </div>
