--- a/ui/index.html
+++ b/ui/index.html
@@ -4,17 +4,26 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class= "container">
         <div class="center">
-            <img id='madi' src="/ui/madi.png" class="img-medium"/>
+            <img id='madi' src="https://pbs.twimg.com/profile_images/744478996042125312/23iZD7fj.jpg" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div id='main-text' class="center text-big bold">
-            Hi! I'm Tarun and this is my first webapp.
-            <h4>I've made some new local changes</h4>
+        <h3>
+            Personal
+        </h3>
+        <div>
+            Hi, My name is Tarun Chadha
         </div>
-        <script>
-            alert('Hi, I\'m JavaScript');
-        </script>
+          <hr/>
+          <h3> Professional </h3>
+        <div>
+            I work at Hasura
+        </div>
+        <hr/>
+          <div class= "footer"></div>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
