--- a/ui/index.html
+++ b/ui/index.html
@@ -21,6 +21,7 @@
         </div>
         <hr/>
           <div class= "footer"></div>
+              This button  <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
