--- a/ui/index.html
+++ b/ui/index.html
@@ -9,6 +9,7 @@
             <img id='madi' src="https://pbs.twimg.com/profile_images/790030731162640385/qk2QUQg1.jpg" class="img-medium"/>
         </div>
         <hr/>
+        <br>
         <h3>
             Personal
         </h3>
@@ -18,7 +19,7 @@
           <hr/>
           <h3> Professional </h3>
         <div>
-            I work at Hasura
+            I study at centre for converging technologies
         </div>
         <hr/>
           <div class= "footer"></div>
