--- a/ui/index.html
+++ b/ui/index.html
@@ -22,7 +22,7 @@
             I study at centre for converging technologies
         </div>
         <hr/>
-          <div class= "footer"></div>
+          <div class= "footer">
               This button  <button id="counter">Click me!</button> has been clicked <span id="count">0</span> times.
               <hr/>
               <input type="text" id="name" placeholder="name"></input>
