[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -8,10 +8,9 @@
         <div class="center">
             <img id='madi' src="https://pbs.twimg.com/profile_images/790030731162640385/qk2QUQg1.jpg" class="img-medium"/>
         </div>
-        <hr/>
-        <br>
-        <h3>
-            Personal
+      
+        <h3> Personal </h3>
+        <div>
             Hi, My name is Tarun Chadha
         </div>
           <hr/>
