[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,19 +5,29 @@
             Article One | Tarun Chadha
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <style>
+            .container {
+                
+                max-width: 800px;
+                margin:0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="container">
+           <div>
             <a href="/">Home</a>
-        </div>
-        <hr/>
-        <h3>
+           </div>
+           <hr/>
+           <h3>
             Article One
-        </h3>
-        <div>
+           </h3>
+           <div>
             Sep 5, 2016
-        </div>
-        <div>
+           </div>
+           <div>
             <p>
                 This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article. 
             </p>
@@ -29,6 +39,7 @@
             <p>
                 This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article.This is the content for my first article. 
             </p>
+            </div>
         </div>
     </body>
 </html>
