--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,8 +10,11 @@
                 
                 max-width: 800px;
                 margin:0 auto;
-                color: grey;
+                color: #4a4a4a;
                 font-family: sans-serif;
+                padding-top: 60px;
+                padding-left: 20px;
+                padding-right: 20px;
             }
         </style>
     </head>
